logs/dag_id=weather_data/run_id=manual__2022-09-03T11:31:54.734071+00:00/task_id=create_table/attempt=1.log
[2022-09-03T11:31:56.226+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: weather_data.create_table manual__2022-09-03T11:31:54.734071+00:00 [queued]>
[2022-09-03T11:31:56.233+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: weather_data.create_table manual__2022-09-03T11:31:54.734071+00:00 [queued]>
[2022-09-03T11:31:56.235+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2022-09-03T11:31:56.235+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 1
[2022-09-03T11:31:56.236+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2022-09-03T11:31:56.244+0000] {taskinstance.py:1389} INFO - Executing <Task(PostgresOperator): create_table> on 2022-09-03 11:31:54.734071+00:00
[2022-09-03T11:31:56.248+0000] {standard_task_runner.py:52} INFO - Started process 10322 to run task
[2022-09-03T11:31:56.251+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'weather_data', 'create_table', 'manual__2022-09-03T11:31:54.734071+00:00', '--job-id', '185', '--raw', '--subdir', 'DAGS_FOLDER/first_dag.py', '--cfg-path', '/tmp/tmpq1boynhz', '--error-file', '/tmp/tmphkb414gy']
[2022-09-03T11:31:56.252+0000] {standard_task_runner.py:80} INFO - Job 185: Subtask create_table
[2022-09-03T11:31:56.295+0000] {task_command.py:371} INFO - Running <TaskInstance: weather_data.create_table manual__2022-09-03T11:31:54.734071+00:00 [running]> on host 3d56073112d8
[2022-09-03T11:31:56.339+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_data
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-03T11:31:54.734071+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-09-03T11:31:54.734071+00:00
[2022-09-03T11:31:56.345+0000] {base.py:68} INFO - Using connection ID 'postgres_default' for task execution.
[2022-09-03T11:31:56.348+0000] {sql.py:315} INFO - Running statement: create table if not exists weather(
                id          serial primary key,
                name        varchar(50)
                temp        float,
                temp_min    float,
                temp_max    float,
                description varchar(50),
                wind_speed  tinyint,
                sunset      smallint,
                sunrise     smallint
            ), parameters: None
[2022-09-03T11:31:56.350+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "temp"
LINE 4:                 temp        float,
                        ^

[2022-09-03T11:31:56.356+0000] {taskinstance.py:1412} INFO - Marking task as FAILED. dag_id=weather_data, task_id=create_table, execution_date=20220903T113154, start_date=20220903T113156, end_date=20220903T113156
[2022-09-03T11:31:56.362+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 185 for task create_table (syntax error at or near "temp"
LINE 4:                 temp        float,
                        ^
; 10322)
[2022-09-03T11:31:56.383+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-09-03T11:31:56.410+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
